@@ -206,3 +206,26 @@ GLADE_CB void on_pbar_okbutton1_pressed(GtkButton * button,
 {
 	calc_update.cancel = 1;
 }
+
+/*
+	Get list of counters to refresh
+ */
+int tilp_pbar_type(CalcFnctsIdx op)
+{
+	extern CalcHandle*  calc_handle;
+	const char **array = calc_handle->calc->counters;
+	const char *str = array[op];
+
+	if(!strcmp(str, "1P"))
+		return 1;
+	else if(!strcmp(str, "1L"))
+		return 2;
+	else if(!strcmp(str, "2P"))
+		return 3;
+	else if(!strcmp(str, "1P1L"))
+		return 4;
+	else if(!strcmp(str, "2P1L"))
+		return 5;
+
+	return 0;
+}
